src/objects/CASSONS_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cassons_Request_URI__c</fullName>
        <label>Cassons Request URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connection_Timeout__c</fullName>
        <defaultValue>300</defaultValue>
        <description>In seconds</description>
        <label>Connection Timeout</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Heroku_End_Point_URL__c</fullName>
        <label>Heroku End Point URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Per_Request__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Parts Per Request</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <label>Port</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proxy_IP_Address__c</fullName>
        <label>Proxy IP Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduler_Interval__c</fullName>
        <defaultValue>120</defaultValue>
        <description>Scheduler interval in minutes.</description>
        <label>Scheduler Interval</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CASSONS Configuration</label>
</CustomObject>